# NST

./: .gitignore  CMakeLists.txt  NOTES  README.md  build.sh  environment.yml  meta.yaml
examples/NCN/1_OPTGM/: fort.80  m.x  qc.in
examples/NCN/3_HESSC/: m.x  qc.in
examples/NCN/4_HESSR/0_CalcHess/sing/: run_molpro2015_blues.sh
examples/NCN/4_HESSR/0_CalcHess/trip/: run_molpro2015_blues.sh
examples/NCN/4_HESSR/1_NoCuts/: hess.1  qc.in
examples/NCN/4_HESSR/2_Cuts/: m.x  qc.1  qc.3  qc.in
examples/NCN/4_HESSR/copy/: fort.44  m.x
examples/NCN/5_NewEffHess/: hess.1  m.x  qc.in
examples/NCN/FLUX/: Test.FChk  hess.1  hess.2  qc.2  qc.in
examples/NCN/HESS-1/: Test.FChk  run.inp  run.sh
examples/NCN/HESS-2/: Test.FChk  run.inp
examples/NCN/OPT/: Test.FChk  fort.80  qc.1  qc.in  qc.x  run.sh
examples/NNO/1_OPTGM/: fort.80  qc.3
examples/NNO/2_ROTGM/: qc.1  qc.in
examples/NNO/4_HESSR/0_CalcHess/sing/: hess.n  run_molpro2015_blues.sh
examples/NNO/4_HESSR/0_CalcHess/trip/: run_molpro2015_blues.sh
examples/NNO/4_HESSR/1_NoCuts/: hess.3  m.x
examples/NNO/4_HESSR/copy/: fort.44  qc.in
examples/NNO/FLUX/: hess.1  hess.2  qc.in  qc.out_1  qc.x
examples/NNO/HESS-1/: freq.molden  run.inp  run.sh
examples/NNO/HESS-2/: freq.molden  run.inp
examples/NNO/OPT/: fort.80  qc.1  qc.2  qc.in  qc.out_1  qc.out_10  qc.out_11  qc.out_12  qc.out_13  qc.out_14  qc.out_15  qc.out_16  qc.out_17  qc.out_18  qc.out_19  qc.out_2  qc.out_3  qc.out_4  qc.out_5  qc.out_6  qc.out_7  qc.out_8  qc.out_9  run.sh
src/: airy.f  dd-gaussian.f  dd-molpro.f  dd.f  g.x  msxfreq.f  nst.f  opt.f  proj.f
src/python/: reader
